--- a/css/style.css
+++ b/css/style.css
@@ -395,7 +395,7 @@ figure {
   position: absolute;
   bottom: 0;
   width: 100%;
-  padding: 20px 20px;
+  /* padding: 20px 20px; */
   line-height: 1.2;
 }
 #fh5co-footer small {
